# graph_rag

./: .gitignore  Dockerfile  dev.ipynb  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  run_docker.sh  search_hit_k_eval.py
docs/: neomodel_advanced_query_operations.markdown  neomodel_getting_started.markdown  neomodel_hooks.markdown  neomodel_path_traversal.markdown
neo4j/: docker-compose.yml  run_docker.sh
src/: chunk_docs_neo4j.py  file_paths.txt  mcp_server.py
src/data/: README.md  combine_indor.ipynb  comque_new.csv  comque_new_enriched.csv  hoanghamobile_with_summary.csv  stopwords-vietnamese.txt  viet_tat.json  words-viral-restaurant.txt
src/data/csv/: behaviours.csv  bill_items.csv  bills.csv  customer_feedback_bill.csv  customer_promo.csv  customer_questions.csv  customercare.csv  customers.csv  dish_ingredient.csv  dish_tag.csv  dishes.csv  feedbacks.csv  ingredients.csv  orders.csv  promotions.csv  questions.csv  staff.csv  suggestions.csv  surveys.csv  tags.csv
src/models/: config.py  order_graph.py  order_manager.py
src/neo4j_manager/: neo4j_order_manager.py.old  order_manager.py
src/test/: helpers_nlp.py  stopwords.txt  test_text_to_graph.ipynb  test_underthesea.ipynb  vietnamese-stopwords-dash.txt
src/tests/: README.md  __init__.py  conftest.py  pytest.ini  requirements-test.txt  test_models.py  test_order_manager.py
src/utils/: __init__.py  helpers.py  helpers_nlp.py  hybridsearch.py  pydantic_helpers.py  schemas.py
